My skills update

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 <img class="my-skills-web-design" src="./images/html5-brands.svg" alt="">
                 <p class="my-skills-text">HTML</p>
             </div>
+            <div class="my-skills-icons">
+                <img class="my-skills-web-design" src="./images/C" alt="">
+                <p class="my-skills-text">C</p>
+            </div>
         </div>
         </div>
     </div>
