open menu, body no-scroll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/b475206aa0.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
-<body>
+<body class="scroll">
     <header class="drop-nav-bar">
         <button class="open-menu"> 
             <img src="icons/menu 1.svg"  alt=""> 
