loader gif, script

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <script src="https://kit.fontawesome.com/b475206aa0.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
-<body class="scroll">
+<body class="scroll no-scroll">
+
+    <div id="preloader"></div>
+
     <header class="drop-nav-bar">
         <button class="open-menu"> 
             <img src="icons/menu 1.svg"  alt=""> 
